# trival

./: README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/master/trival/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp  png_decoder.cpp  png_decoder.h  shader.h  thread.cpp  thread.h  triangle.cpp  util.h
app/src/main/cpp/render/: egl_core.cpp  egl_core.h  egl_share_context.cpp  egl_share_context.h  pic_texture.cpp  pic_texture.h  preview_controller.cpp  preview_controller.h  preview_render.cpp  preview_render.h  rgba_frame.cpp  rgba_frame.h
app/src/main/java/com/master/trival/: MainActivity.java  PlayRender.java  Test.kt
app/src/main/jniLibs/include/libavutil/: ffversion.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/master/trival/: ExampleUnitTest.kt
cvdemo/: build.gradle
cvdemo/src/androidTest/java/com/master/cvdemo/: ExampleInstrumentedTest.java
cvdemo/src/main/: AndroidManifest.xml
cvdemo/src/main/java/com/master/cvdemo/: MainActivity.java
cvdemo/src/test/java/com/master/cvdemo/: ExampleUnitTest.java
